--- a/D3-Homework/StarterCode/assets/index.html
+++ b/D3-Homework/StarterCode/assets/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head> 
-        <title>D3 Practice</title>
+        <title> D3 Practice </title>
         <script src="https://d3js.org/d3.v4.min.js"> </script>
     </head>
 
     <body>
         <h1>Hello</h1>
-        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="assets/js/app.js"></script>
+
 
     </body>
 
