--- a/D3-Homework/StarterCode/assets/index.html
+++ b/D3-Homework/StarterCode/assets/index.html
@@ -2,12 +2,15 @@
 <html>
     <head> 
         <title> D3 Practice </title>
-        <script src="https://d3js.org/d3.v4.min.js"> </script>
+        <script src="https://d3js.org/d3.v5.min.js"></script>
+
     </head>
 
     <body>
         <h1>Hello</h1>
-        <script type="text/javascript" src="assets/js/app.js"></script>
+        <script src="/js/app.js"></script>
+
+
 
 
     </body>
