--- a/D3-Homework/assets/index.html
+++ b/D3-Homework/assets/index.html
@@ -2,16 +2,14 @@
 <html>
     <head> 
         <title> D3 Practice </title>
-        <script src="https://d3js.org/d3.v5.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
 
     </head>
 
     <body>
         <h1>Hello</h1>
+        <div class="chart"></div>
         <script src="/js/app.js"></script>
-
-
-
 
     </body>
 
