create css stylesheet for data viz

--- a/D3-Homework/assets/index.html
+++ b/D3-Homework/assets/index.html
@@ -2,6 +2,7 @@
 <html>
     <head> 
         <title> D3 Practice </title>
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://d3js.org/d3.v5.min.js"></script>
 
     </head>
