--- a/D3-Homework/assets/index.html
+++ b/D3-Homework/assets/index.html
@@ -11,6 +11,9 @@
         <h1>Hello</h1>
         <div class="chart"></div>
         <script src="/js/app.js"></script>
+        <!-- This is your tooltip's container -->
+        <div class="tooltip"></div>
+        <h2>hello again</h2>
 
     </body>
 
