--- a/Day5/index.html
+++ b/Day5/index.html
@@ -7,6 +7,8 @@
     <body>
         <div id="wrapper"></div>
         <script src="http://d3js.org/d3.v5.min.js"></script>
+        <script src="https://d3js.org/d3-array.v2.min.js"></script>
+
         <script src="./bar_chart.js"></script>
 
     </body>
