--- a/Day7/index.html
+++ b/Day7/index.html
@@ -8,6 +8,7 @@
         <div id="wrapper"></div>
         <script src="http://d3js.org/d3.v5.min.js"></script>
         <script src="https://d3js.org/d3-array.v2.min.js"></script>
+        <script src="https://d3js.org/d3-force.v2.min.js"></script>
 
         <script src="./beeswarm.js"></script>
 
