--- a/Day7/index.html
+++ b/Day7/index.html
@@ -7,8 +7,9 @@
     <body>
         <div id="wrapper"></div>
         <script src="http://d3js.org/d3.v5.min.js"></script>
-        <script src="https://d3js.org/d3-array.v2.min.js"></script>
         <script src="https://d3js.org/d3-force.v2.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
+
 
         <script src="./beeswarm.js"></script>
 
