--- a/Day9/dataviz/line-chart/interaction.html
+++ b/Day9/dataviz/line-chart/interaction.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-          <link rel="stylesheet" href="style.css">
 
     </head>
 
     <body>
+
+        <!-- Add 2 buttons -->
+      
         <div id="wrapper"></div>
+
+        
 
 
         <script src="https://d3js.org/d3.v6.min.js"></script>
-        <script src="./app.js"></script>
+        <script src="./app2.js"></script>
 
 
     </body>
