--- a/Day9/dataviz/circle-chart/index.html
+++ b/Day9/dataviz/circle-chart/index.html
@@ -5,10 +5,18 @@
     </head>
 
     <body>
-        <div id="wrapper"></div>
+      <!-- Load d3.js -->
+<script src="https://d3js.org/d3.v4.js"></script>
 
+<!-- Color scale -->
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
-        <script src="https://d3js.org/d3.v6.min.js"></script>
+<!-- Add 2 buttons -->
+<button onclick="update(data1)">Data 1</button>
+<button onclick="update(data2)">Data 2</button>
+
+<!-- Create a div where the graph will take place -->
+<div id="my_dataviz"></div>
         <script src="./app.js"></script>
 
 
