--- a/Day9/dataviz/bar-chart/index.html
+++ b/Day9/dataviz/bar-chart/index.html
@@ -6,7 +6,10 @@
     </head>
 
     <body>
-        <div id="wrapper"></div>
+        <div id="wrapper">
+         <div id="tooltip" style="position:absolute"></div>
+
+        </div>
 
 
         <script src="https://d3js.org/d3.v6.min.js"></script>
